--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Logica</title>
 </head>
 
@@ -12,7 +13,7 @@
     <h1>Logica da Programação</h1>
 
     <script src="main"></script>
-    <script src="pratice9.js"></script>
+    <script src="pratice12.js"></script>
 </body>
 
 </html>
