--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Logica da Programação</h1>
 
     <script src="main"></script>
-    <script src="pratice23.js"></script>
+    <script src="./Part2/file2.js"></script>
 </body>
 
 </html>
