--- a/Algoritimo/Failed Calculator/index.html
+++ b/Algoritimo/Failed Calculator/index.html
@@ -35,7 +35,7 @@
 
         <br>
 
-        <button class="btn" onclick="toCalculate()">Calcular</button>
+        <button class="btn" onclick="calcular()">Calcular</button>
 
 
 
